--- a/src/store/language/locales/vi/common.json
+++ b/src/store/language/locales/vi/common.json
@@ -819,7 +819,9 @@
   },
   "patientsPage": {
     "table": {
-      "lastVisit": "Lần khám cuối"
+      "lastVisit": "Lần khám cuối",
+      "name": "Tên"
+    
     }
   }
 }
